--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -2,7 +2,7 @@
 
 {% block content%}
     <div>
-        <form method="POST" action="">
+        <form action="" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Submit">
