--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,10 +5,15 @@
 
     <div>
         <div>
-            <a href="{% url 'create-room'%}">CREATE NEW ROOM</a>
+            <a href="{% url 'create-room'%}">
+                 new room
+            </a>
             <hr>
             {% for room in rooms %}
                 <div>
+                    <a href="{% url 'update-room' room.id %}">
+                        update room
+                    </a>
                     <span>@{{ room.host.username }}</span>
                     <h5>{{ room.id }} --
                         <a href="{% url 'room' room.id %}">{{room.name}}</a>
